# clayouter

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  README.md  example.c  tool.py
.github/workflows/: cmake-multi-platform.yml
clay/: clay.h  clay_renderer_raylib.c  clay_renderer_raylib.h
src/: clay_enum_names.c  clay_enum_names.h  clay_struct_names.c  clay_struct_names.h  main.c  types.h  ui_element.c  ui_element.h  utilities.h
src/IO/: dump_tree.c  dump_tree.h  export_layout.c  export_layout.h  import_layout.c  import_layout.h  import_preprocessor.c  import_preprocessor.h  parse_tree.c  parse_tree.h  stb_c_lexer_config.h
src/components/: clay_components.c  clay_components.h
